--- a/css/main.css
+++ b/css/main.css
@@ -3,20 +3,29 @@ body{
         margin: 0px;
         padding: 0px;
 }
+
+p{
+        font-family: SourceSansPro;
+        font-size: 15px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.6;
+        letter-spacing: normal;
+}
+
 #header{
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
         width: 100%;
-        /* margin: 0px 30px 0px 30px;  */
-        
         background-color: #2d2827;
 }
 
 /* styling topHeader unordered list*/
-#topHeader{
+#topHeader ul li{
         width: 100%;
-        height: 53px;
+        height: auto;
         color: #999999;
         font-family: SourceSansPro;
         font-size: 12px;
@@ -25,25 +34,21 @@ body{
         font-stretch: normal;
         line-height: 1.83;
         letter-spacing: 2.4px;
-        /* text-align: left; */
-        
-}
-
-ul#topHeader li{
         display: inline;
-        padding: 0px 0px 0px 120px; 
+        padding: 0px 250px 0px 60px; 
 }
 
 #mainNav{
         width:100%;
-        height: 415px;
+        position: absolute;
+        top: 10%;
+        color:#ffffff;
 }
 
 #mainNav ul li{
         display: inline;
         list-style: none;
-        padding: 0px 0px 0px 90px;
-        /* background-color: #666666; */
+        padding: 0px 20px 0px 60px;
         width: 100%;
         height: 53px;
         font-family: Dosis;
@@ -54,11 +59,246 @@ ul#topHeader li{
         line-height: normal;
         word-spacing: 0.5rem;
         letter-spacing: 0.8px;
-
 }
 
 #mainNav a{
         text-decoration: none;
-        color: whitesmoke;
-        /* padding: 0px 80px 0px 40px; */
+        color:#ffffff;
+}
+
+#investorName{
+        font-size: 30px;
+        color: #fffefe;
+}
+
+#overLayerContainer{
+        width: 100%;
+        height: 750px;
+}
+
+#overLayer{
+        width: 50%;
+        height:20vw;
+        top: 45%;
+        padding: 1rem 0rem 1rem 0rem;
+        position: absolute;
+        text-align: center;
+        margin: 0rem 20rem 20rem;
+        color: #e6e6e6;
+        background-color: rgba(0,0,0,.3);
+}
+
+#lookBookButton{
+        width: 150px;
+        height:45px;
+        border-radius: 20px;
+        border:none;
+        color: #e6e6e6;
+        background-color: #a88d7b;
+}
+
+#scrollDownIcon{
+        top: 95%;
+        position: absolute;
+        text-align: center;
+        margin: 15rem 40rem;
+        color: #e6e6e6;
+        font-size: 30px;
+}
+
+/* featured product section */
+
+#featuredProductContainer{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(1,1fr);
+        width: 100%;
+        height: 600px;
+        text-align: center;
+        background-color: var(--white);
+}
+
+#featuredProductImages{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: repeat(1,1fr);
+        width: 100%;
+        height: 550px;
+        margin-top: 2em;
+}
+
+#featuredProductNames{
+        font-family: SourceSansPro;
+        font-size: 20px;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 2.4;
+        letter-spacing: normal;
+        color: #333333;
+}
+
+#featuredProductPrices{
+        font-size: 15px;
+        font-weight: 600;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 3.2;
+        letter-spacing: normal;
+        color: #999999;
+}
+
+/* NEW COLLECTION SECTION */
+
+
+#newCollectionContainer{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(1,1fr);
+        width: 100%;
+        height: 38rem;
+        text-align: center;
+        background-color: var(--white);
+}
+
+#newCollectionImages{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: repeat(1,1fr);
+        width: 100%;
+        margin-top: 1em;
+}
+
+/* HAND CRAFT LEATHER GOODS */
+
+
+#handCraftContainer{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(1,1fr);
+        width: 100%;
+        height: 18rem;
+        text-align: center;
+        background-color: #2d2827;
+        color: #ffffff;
+        text-align: center;
+        opacity: 0.9;
+}
+
+#handCraftInfo{
+        width: 50%;
+        height: 8rem;
+        color: #ffffff;
+        margin: 4em 40em 2em 10em;
+}
+
+#handCraftHeading{
+        font-family: Dosis;
+        font-size: 38px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 0.5;
+        letter-spacing: normal;
+        text-align: center;
+}
+
+#viewMoreButton{
+        width: 150px;
+        height: 40px;
+        border: none;
+        background-color: #a88d7b;
+}
+
+/* OUR BLOG SECTION */
+
+#ourBlogContainer{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(1,1fr);
+        width: 100%;
+        text-align: center;
+}
+
+#ourBlogInfo{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: repeat(1,1fr);
+        width: 100%;
+        margin-top: 1em; 
+}
+
+#ourBlogButton{
+        width: 150px;
+        height: 40px;
+        border: none;
+        font-family: SourceSansPro;
+        font-size: 15px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 2.1;
+        letter-spacing: 1.5px;
+        background-color: #a88d7b;
+}
+
+
+/* FOOTER SECTION */
+
+#footer{
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        grid-template-rows: repeat(1,1fr);
+        width: 100%;
+        height: 400px;
+        color: #ffffff;
+        font-family: SourceSansPro;
+        font-size: 15px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.6;
+        letter-spacing: normal;
+        text-align: left;
+        background-color: #2d2827;
+}
+
+.footerHeadingColour{
+        font-family: SourceSansPro;
+        font-size: 18px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.33;
+        letter-spacing: normal;
+        text-align: justify;
+        color: #e5e5e5;
+}
+
+.fa-phone{
+        transform: rotate(90deg);
+}
+
+ul.footerListItems li{
+        list-style: none;
+        list-style-type: none;
+}
+
+
+#instagramImages{
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        grid-template-rows: repeat(1,1fr);
+        width: 100%;
+        grid-gap: 10px;
+        /* margin-right: 20px; */
+}
+
+#signatureBar{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(1,1fr);
+        width: 100%;
+        height: 83px;
+        text-align: center;
+        background-color: #d7d7d7;
 }
